--- a/Analysis_operation.ipynb
+++ b/Analysis_operation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1863,7 +1863,7 @@
        "[1234347 rows x 21 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8469,6 +8469,39 @@
    "outputs": [],
    "source": [
     "###################################Transaction############################################"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "test_op=pd.read_csv(r\"D:\\DA_competition\\DC\\data\\operation_test.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28001"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=pd.Series(test_op.device_code3.apply(lambda x:str(x)).unique())\n",
+    "b=pd.Series(train_op.device_code2.apply(lambda x:str(x)).unique())\n",
+    "len(a[~a.isin(b)])"
    ]
   },
   {
