--- a/Model1.ipynb
+++ b/Model1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -41,21 +41,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_fts=pd.DataFrame(pd.concat([train_op.UID,train_tr.UID],axis=0).unique())\n",
-    "train_fts.columns=[\"UID\"]\n",
-    "train_fts.sort_values(\"UID\",inplace=True)\n",
-    "test_fts=pd.read_csv(r\"D:\\DA_competition\\DC\\data\\sub_sample.csv\")\n",
-    "test_fts=test_fts.drop(\"Tag\",axis=1)\n",
-    "#31198"
+    "train_op[\"device_code\"]=train_op[[\"device_code1\",\"device_code2\",\"device_code3\"]].fillna(method=\"bfill\",axis=1).iloc[:,0]\n",
+    "train_op[\"ip\"]=train_op[[\"ip1\",\"ip2\"]].fillna(method=\"bfill\",axis=1).iloc[:,0]\n",
+    "train_op[\"ip_sub\"]=train_op[[\"ip1_sub\",\"ip2_sub\"]].fillna(method=\"bfill\",axis=1).iloc[:,0]\n",
+    "\n",
+    "test_op[\"device_code\"]=test_op[[\"device_code1\",\"device_code2\",\"device_code3\"]].fillna(method=\"bfill\",axis=1).iloc[:,0]\n",
+    "test_op[\"ip\"]=test_op[[\"ip1\",\"ip2\"]].fillna(method=\"bfill\",axis=1).iloc[:,0]\n",
+    "test_op[\"ip_sub\"]=test_op[[\"ip1_sub\",\"ip2_sub\"]].fillna(method=\"bfill\",axis=1).iloc[:,0]\n",
+    "\n",
+    "train_tr[\"device_code\"]=train_tr[[\"device_code1\",\"device_code2\",\"device_code3\"]].fillna(method=\"bfill\",axis=1).iloc[:,0]\n",
+    "test_tr[\"device_code\"]=test_tr[[\"device_code1\",\"device_code2\",\"device_code3\"]].fillna(method=\"bfill\",axis=1).iloc[:,0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -66,18 +70,23 @@
     "#transaction表\n",
     "#1、UID对应channel、amt_src1、trans_type1、amt_src2、trans_type2、market_type：cross_type\n",
     "op_fields1=[\"mode\",\"success\",\"os\",\"version\"]\n",
-    "tr_fields1=[\"channel\",\"amt_src1\",\"trans_type1\",\"amt_src2\",\"trans_type2\",\"market_type\"]\n",
-    "def get_discrete_fts1(data,fields):\n",
-    "    data_one_hot=pd.get_dummies(data[fields].applymap(str),dummy_na=True)\n",
-    "    data_one_hot[\"UID\"]=data[\"UID\"]\n",
-    "    fts_cross_type=data_one_hot.groupby(\"UID\").sum().reset_index(drop=False)\n",
+    "tr_fields1=[\"channel\",\"amt_src1\",\"trans_type1\",\"amt_src2\",\"trans_type2\"]\n",
+    "def get_discrete_fts1(train_data,test_data,fields):\n",
+    "    data_one_hot=pd.get_dummies(pd.concat([train_data[fields].applymap(str),test_data[fields].applymap(str)],axis=0),dummy_na=True)\n",
+    "    train_data_one_hot=data_one_hot.iloc[:len(train_data),:].reset_index(drop=True)\n",
+    "    test_data_one_hot=data_one_hot.iloc[len(train_data):,:].reset_index(drop=True)\n",
+    "    train_data_one_hot[\"UID\"]=train_data[\"UID\"]\n",
+    "    test_data_one_hot[\"UID\"]=test_data[\"UID\"]\n",
+    "    train_fts_cross_type=train_data_one_hot.groupby(\"UID\").sum().reset_index(drop=False)\n",
+    "    test_fts_cross_type=test_data_one_hot.groupby(\"UID\").sum().reset_index(drop=False)\n",
+    "    \n",
     "    print(\"=====OK======\")\n",
-    "    return fts_cross_type"
+    "    return train_fts_cross_type,test_fts_cross_type\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -89,22 +98,17 @@
     "#transaction表\n",
     "# 2.1、UID对应channel,day,time,amt_src1,amt_src2,merchant,code1,code2,trans_type1,trans_type2,device1,device2,geo_code,market_code,market_type种类数\n",
     "# 2.2、UID对应ip1、ip1_sub、acc_id1、acc_id2、acc_id3、device_code1、2、3、mac1数\n",
-    "op_fields2=[\"day\",\"hour\",\"mode\",\"success\",\"os\",\"version\",\"device1\",\"device2\",\n",
-    "           \"geo_code\",\"device_code1\",\"device_code2\",\"device_code3\",\"mac1\",\n",
-    "           \"mac2\",\"wifi\",\"ip1\",\"ip2\",\"ip1_sub\",\"ip2_sub\"]\n",
-    "tr_fields2=[\"channel\",\"day\",\"hour\",\"amt_src1\",\"amt_src2\",\"merchant\",\"code1\",\n",
-    "           \"code2\",\"trans_type1\",\"trans_type2\",\"device1\",\"device2\",\"geo_code\",\"market_code\",\n",
-    "           \"market_type\",\"ip1\",\"ip1_sub\",\"acc_id1\",\"acc_id2\",\"acc_id3\",\"device_code1\",\n",
-    "           \"device_code2\",\"device_code3\",\"mac1\"]\n",
+    "op_fields2=[\"day\",\"hour\",\"mode\",\"success\",\"os\",\"version\",\"device1\",\"device2\",\"device_code\",\"ip\",\"ip_sub\"]\n",
+    "tr_fields2=[\"channel\",\"day\",\"hour\",\"amt_src1\",\"amt_src2\",\"merchant\",\"trans_type1\",\"trans_type2\",\"device2\",\"ip1\",\"ip1_sub\",\"acc_id1\",\"mac1\",\"device_code\"]\n",
     "def get_kinds_fts2(data,fields):\n",
-    "    fts=data.groupby(\"UID\")[fields].apply(lambda x:x.apply(lambda y:len(y.unique()))).reset_index(drop=False)\n",
+    "    fts=data.groupby(\"UID\")[fields].apply(lambda x:x.nunique()).reset_index(drop=False)\n",
     "    print(\"=====OK======\")\n",
     "    return fts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -116,8 +120,8 @@
     "#transaction表\n",
     "# 3.1、UID对应ip1、ip1_sub、acc_id1、acc_id2、acc_id3、device_code1、2、3、mac1对应的用户数量均值、最大值、最小值（因为一个UID可能对应多个连续字段）\n",
     "# 3.2、UID对应ip1、ip1_sub、acc_id1、acc_id2、acc_id3、device_code1、2、3、mac1对应的用户羊毛党概率占比均值、最大值、最小值\n",
-    "op_fields3=[\"device_code1\",\"device_code2\",\"device_code3\",\"mac1\",\"mac2\",\"wifi\",\"ip1\",\"ip2\",\"ip1_sub\",\"ip2_sub\"]\n",
-    "tr_fields3=[\"ip1\",\"ip1_sub\",\"acc_id1\",\"acc_id2\",\"acc_id3\",\"device_code1\",\"device_code2\",\"device_code3\",\"mac1\"]\n",
+    "op_fields3=[\"mac1\",\"mac2\",\"wifi\",\"device_code\",\"ip\",\"ip_sub\"]\n",
+    "tr_fields3=[\"ip1\",\"ip1_sub\",\"acc_id1\",\"acc_id2\",\"acc_id3\",\"mac1\",\"device_code\"]\n",
     "# def get_fields_as_key_fts(data,fields):\n",
     "#     fts_all=pd.DataFrame(data[\"UID\"].unique())\n",
     "#     fts_all.columns=[\"UID\"]\n",
@@ -153,7 +157,7 @@
     "    fts_all.columns=[\"UID\"]\n",
     "    for field in fields:\n",
     "        \n",
-    "        f_count=data[[\"UID\",field]].drop_duplicates().fillna(0).groupby(field).count()\n",
+    "        f_count=data[[\"UID\",field]].drop_duplicates().groupby(field).count()\n",
     "        df=pd.DataFrame(f_count)\n",
     "        df.columns=[\"user_counts\"]\n",
     "        df=df.reset_index(drop=False)\n",
@@ -176,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -195,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -222,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -248,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -263,13 +267,23 @@
       "=====OK======\n",
       "=====OK======\n",
       "=====OK======\n",
+      "=====OK======\n",
+      "=====OK======\n",
+      "=====OK======\n",
+      "=====OK======\n",
+      "=====OK======\n",
+      "=====OK======\n",
+      "=====OK======\n",
+      "=====OK======\n",
+      "=====OK======\n",
       "=====OK======\n"
      ]
     }
    ],
    "source": [
-    "train_op_fts1=get_discrete_fts1(train_op,op_fields1)\n",
-    "train_tr_fts1=get_discrete_fts1(train_tr,tr_fields1)\n",
+    "train_op_fts1,test_op_fts1=get_discrete_fts1(train_op,test_op,op_fields1)\n",
+    "train_tr_fts1,test_tr_fts1=get_discrete_fts1(train_tr,test_tr,tr_fields1)\n",
+    "\n",
     "train_op_fts2=get_kinds_fts2(train_op,op_fields2)\n",
     "train_tr_fts2=get_kinds_fts2(train_tr,tr_fields2)\n",
     "train_op_fts3=get_fields_as_key_fts3(train_op,op_fields3)\n",
@@ -277,17 +291,29 @@
     "train_op_fts4=get_sample_counts_fts4(train_op)\n",
     "train_tr_fts4=get_sample_counts_fts4(train_tr)\n",
     "train_tr_fts5=get_tr_money_fts5(train_tr,tr_fields5)\n",
-    "#train_tr_fts6=get_tr_null_fts6(train_tr,tr_fields6)"
+    "train_tr_fts6=get_tr_null_fts6(train_tr,tr_fields6)\n",
+    "\n",
+    "test_op_fts2=get_kinds_fts2(test_op,op_fields2)\n",
+    "test_tr_fts2=get_kinds_fts2(test_tr,tr_fields2)\n",
+    "test_op_fts3=get_fields_as_key_fts3(test_op,op_fields3)\n",
+    "test_tr_fts3=get_fields_as_key_fts3(test_tr,tr_fields3)\n",
+    "test_op_fts4=get_sample_counts_fts4(test_op)\n",
+    "test_tr_fts4=get_sample_counts_fts4(test_tr)\n",
+    "test_tr_fts5=get_tr_money_fts5(test_tr,tr_fields5)\n",
+    "test_tr_fts6=get_tr_null_fts6(test_tr,tr_fields6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "train_fts=pd.DataFrame(pd.concat([train_op.UID,train_tr.UID],axis=0).unique())\n",
+    "train_fts.columns=[\"UID\"]\n",
+    "train_fts.sort_values(\"UID\",inplace=True)\n",
     "train_fts=train_fts.merge(train_op_fts1,how=\"left\",on=\"UID\")\n",
     "train_fts=train_fts.merge(train_tr_fts1,how=\"left\",on=\"UID\")\n",
     "train_fts=train_fts.merge(train_op_fts2,how=\"left\",on=\"UID\")\n",
@@ -302,46 +328,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=====OK======\n",
-      "=====OK======\n",
-      "=====OK======\n",
-      "=====OK======\n",
-      "=====OK======\n",
-      "=====OK======\n",
-      "=====OK======\n",
-      "=====OK======\n",
-      "=====OK======\n"
-     ]
-    }
-   ],
-   "source": [
-    "test_op_fts1=get_discrete_fts1(test_op,op_fields1)\n",
-    "test_tr_fts1=get_discrete_fts1(test_tr,tr_fields1)\n",
-    "test_op_fts2=get_kinds_fts2(test_op,op_fields2)\n",
-    "test_tr_fts2=get_kinds_fts2(test_tr,tr_fields2)\n",
-    "test_op_fts3=get_fields_as_key_fts3(test_op,op_fields3)\n",
-    "test_tr_fts3=get_fields_as_key_fts3(test_tr,tr_fields3)\n",
-    "test_op_fts4=get_sample_counts_fts4(test_op)\n",
-    "test_tr_fts4=get_sample_counts_fts4(test_tr)\n",
-    "test_tr_fts5=get_tr_money_fts5(test_tr,tr_fields5)\n",
-    "#test_tr_fts6=get_tr_null_fts6(test_tr,tr_fields6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "test_fts=pd.read_csv(r\"D:\\DA_competition\\DC\\data\\sub_sample.csv\")\n",
+    "test_fts=test_fts.drop(\"Tag\",axis=1)\n",
     "test_fts=test_fts.merge(test_op_fts1,how=\"left\",on=\"UID\")\n",
     "test_fts=test_fts.merge(test_tr_fts1,how=\"left\",on=\"UID\")\n",
     "test_fts=test_fts.merge(test_op_fts2,how=\"left\",on=\"UID\")\n",
@@ -356,7 +350,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -365,16 +368,16 @@
        "Index(['UID', 'mode_00094ae2a1d62504', 'mode_072eee5c88d380df',\n",
        "       'mode_08017d2cb28c2348', 'mode_09080b31b40d57e8',\n",
        "       'mode_0e72a7851fadf00b', 'mode_12845a3fe90eb1de',\n",
-       "       'mode_148dc2618a3a92a4', 'mode_1c341176507fbd9b',\n",
-       "       'mode_1cbe3d31395984d7',\n",
+       "       'mode_148dc2618a3a92a4', 'mode_17a6ee1a7b6a02b7',\n",
+       "       'mode_1c341176507fbd9b',\n",
        "       ...\n",
        "       'UID_sample_counts_y', 'trans_amt_sum', 'bal_sum', 'trans_amt_max',\n",
        "       'bal_max', 'trans_amt_min', 'bal_min', 'trans_amt_mean', 'bal_mean',\n",
        "       'Tag'],\n",
-       "      dtype='object', length=432)"
+       "      dtype='object', length=442)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -399,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
@@ -413,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
@@ -436,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
@@ -462,16 +465,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7601635514018692"
+       "0.70233644859813082"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,8 +487,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#测试集\n",
@@ -495,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -506,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
@@ -517,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
@@ -529,15 +534,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "train_fts.to_csv(r\"D:\\DA_competition\\DC\\data\\train_fts_without_6.csv\",index=False)\n",
-    "test_fts.to_csv(r\"D:\\DA_competition\\DC\\data\\test_fts_without_6.csv\",index=False)"
+    "# train_fts.to_csv(r\"D:\\DA_competition\\DC\\data\\train_fts_without_6.csv\",index=False)\n",
+    "# test_fts.to_csv(r\"D:\\DA_competition\\DC\\data\\test_fts_without_6.csv\",index=False)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#减少1：线下0.71507009345794392 线上：0.06081\n",
+    "#减少2：线下：0.74836448598130845 线上：0.00***9\n",
+    "#减少1、6：线下：0.70992990654205612 线上：0.069519\n",
+    "#减少1、6、4：线上：0.04\n",
+    "#减少1、3：线下：0.66635514018691588 线上：0.01\n",
+    "#减少1、4：线下：0.70712616822429908 线上：0.00***6\n",
+    "#减少1、5：线下：0.70864485981308412 线上：0.070254"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#one-hot的时候特征的顺序全都不对了，就很烦，训练集测试集应该并在一起进行one-hot cross-type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#修改了代码bug cross-type:线下：0.71343457943925226 线上：0.05\n",
+    "\n",
+    "#code1,code2\n",
+    "#删除了空值很多的字段，合并了可合并项，取消了fts3填充0值\n",
+    "#线下：0.71285046728971957，线上："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
